--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/estilos.css">
     <script src="https://kit.fontawesome.com/8b4e42a2cf.js" crossorigin="anonymous"></script>
+    <link rel="shortcut icon" href="./favicom.ico" type="image/x-icon">
     <title>BREAKING BAR</title>
 </head>
 <body>
@@ -25,10 +26,7 @@
     <main>
         <div class="imagenPrincipal"><img src="./assets/imagen/entrada.png"></div>
 
-<article>
-
-            <!--Se utilizó Lorem Impzun y nombres aleatorios para las descripciones, en order de ejemplificar como la información estará distribuida para la pre-entrega. Esta se completara para apropiadamente para la entrega final-->
-
+<div class="contenedorPrincipal">
 
         <div class="intro">
 
@@ -38,7 +36,7 @@
 
         <div class="intro">
 
-            <h1>QUEREMOS HACER UN IMPERIO</h1>
+            <h2>QUEREMOS HACER UN IMPERIO</h2>
             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
                 <br>
                 <br>
@@ -46,15 +44,12 @@
                 <a href="./pages/nosotros.html"><h3>¡CONOCE MAS!</h3></a>
                 <br>
         </div>
-   
-    </article>
 
-<section>
+<div class="comidasPrincipal">
 
     <div class="comidas">
 
-        <h1>¿QUÉ SABORES PUEDO ORDERNAR?</h1>
-        <br>
+        <h2 class="ordenTitulo">¿QUÉ PUEDO ORDERNAR?</h2>
         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
             <br>
             <br>
@@ -65,13 +60,13 @@
             <br>
     </div>
 
-    <div class="comidas">
+    <div class="comidasImagen">
 
         <img src="./assets/imagen/comidas.jpg">
 
     </div>
 
-</section>
+    </div>
 
     </main>
 
@@ -79,16 +74,26 @@
 
         <h3>SPONSORS</h3>
 
-       <a href="https://www.coca-cola.com.ar/" target="_blank"><img src="./assets/imagen/coca_cola_logo.png"></a>
-       <a href="https://www.nestle.com/" target="_blank"></a><img src="./assets/imagen/nestle_logo.png"></a>
-       <a href="https://www.pepsico.com/" target="_blank"></a><img src="./assets/imagen/pepsico_logo.png"></a>
+    <div class="sponsors">
+
+    <ul>
+
+       <li><a href="https://www.coca-cola.com.ar/" target="_blank"><img src="./assets/imagen/coca_cola_logo.png"></a></li>
+       <li><a href="https://www.nestle.com/" target="_blank"><img src="./assets/imagen/nestle_logo.png"></a></li>
+       <li><a href="https://www.pepsico.com/" target="_blank"><img src="./assets/imagen/pepsico_logo.png"></a></li>
+
+    </ul>
+
+    </div>
 
        <h3>SOCIAL PAGES</h3>
 
     <div class="iconBox">
+
         <a href="https://www.facebook.com/people/Breaking-Bar-Moreno/100061212710180/" target="_blank"><i class="socialIcons fa-brands fa-facebook fa-3x fa-fade"></i></a>
         <a href="https://twitter.com/breakingbar3" target="_blank"><i class="socialIcons fa-brands fa-twitter fa-3x fa-fade"></i></a>
         <a href="https://www.instagram.com/breakingbar.arg/" target="_blank"><i class="socialIcons fa-brands fa-instagram fa-3x fa-fade"></i></a>
+    
     </div>
 
     <h5>COPYRIGHT ESTEBAN CORLETTI 2023</h5>
