modificacion de la página menu.html con flexbox

--- a/pages/menu.html
+++ b/pages/menu.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/estilos.css">
     <script src="https://kit.fontawesome.com/8b4e42a2cf.js" crossorigin="anonymous"></script>
+    <link rel="shortcut icon" href="../favicom.ico" type="image/x-icon">
     <title>BREAKING BAR</title>
 </head>
 <body>
@@ -26,7 +27,7 @@
         <!--Se utilizó Lorem Impzun y nombres aleatorios para las descripciones, en order de ejemplificar como la información estará distribuida para la pre-entrega. Esta se completara para apropiadamente para la entrega final-->
         <div class="imagenMenu"></div>
 
-<article>
+<div class="contenedorMenu">
 
 <h1>MENU</h1>
 
@@ -39,6 +40,8 @@
         <div class="infoComida">
             <h2>FUSIÓN CHEDAR</h2>
             <p>It has survived not only five centuries, but also the leap into the electronic typesetting that followed, remaining essentially unchanged.</p>
+            <h4>PRECIO: </h4>
+           <h4>OFERTA DE MIEMBRO: </h4>
         </div>
 
     </div>
@@ -49,6 +52,8 @@
         <div class="infoComida">
             <h2>COMBO FRITO</h2>
             <p>It has survived not only five centuries, but also the leap into the electronic typesetting that followed, remaining essentially unchanged.</p>
+           <h4>PRECIO: </h4>
+           <h4>OFERTA DE MIEMBRO: </h4> 
         </div>
 
     </div>
@@ -59,6 +64,8 @@
         <div class="infoComida">
             <h2>ESPECIAL DEL DÍA</h2>
             <p>It has survived not only five centuries, but also the leap into the electronic typesetting that followed, remaining essentially unchanged.</p>
+            <h4>PRECIO: </h4>
+           <h4>OFERTA DE MIEMBRO: </h4> 
         </div>
 
     </div>
@@ -69,6 +76,8 @@
         <div class="infoComida">
             <h2>FUSIÓN CHEDAR</h2>
             <p>It has survived not only five centuries, but also the leap into the electronic typesetting that followed, remaining essentially unchanged.</p>
+            <h4>PRECIO: </h4>
+           <h4>OFERTA DE MIEMBRO: </h4> 
         </div>
 
     </div>
@@ -79,6 +88,8 @@
         <div class="infoComida">
             <h2>COMBO FRITO</h2>
             <p>It has survived not only five centuries, but also the leap into the electronic typesetting that followed, remaining essentially unchanged.</p>
+            <h4>PRECIO: </h4>
+           <h4>OFERTA DE MIEMBRO: </h4> 
         </div>
 
     </div>
@@ -89,6 +100,8 @@
         <div class="infoComida">
             <h2>ESPECIAL DEL DÍA</h2>
             <p>It has survived not only five centuries, but also the leap into the electronic typesetting that followed, remaining essentially unchanged.</p>
+            <h4>PRECIO: </h4>
+           <h4>OFERTA DE MIEMBRO: </h4> 
         </div>
 
     </div>
@@ -99,6 +112,8 @@
         <div class="infoComida">
             <h2>FUSIÓN CHEDAR</h2>
             <p>It has survived not only five centuries, but also the leap into the electronic typesetting that followed, remaining essentially unchanged.</p>
+            <h4>PRECIO: </h4>
+           <h4>OFERTA DE MIEMBRO: </h4> 
         </div>
 
     </div>
@@ -109,6 +124,8 @@
         <div class="infoComida">
             <h2>COMBO FRITO</h2>
             <p>It has survived not only five centuries, but also the leap into the electronic typesetting that followed, remaining essentially unchanged.</p>
+            <h4>PRECIO: </h4>
+           <h4>OFERTA DE MIEMBRO: </h4> 
         </div>
 
     </div>
@@ -119,6 +136,8 @@
         <div class="infoComida">
             <h2>ESPECIAL DEL DÍA</h2>
             <p>It has survived not only five centuries, but also the leap into the electronic typesetting that followed, remaining essentially unchanged.</p>
+            <h4>PRECIO: </h4>
+           <h4>OFERTA DE MIEMBRO: </h4> 
         </div>
 
     </div>
@@ -129,6 +148,8 @@
         <div class="infoComida">
             <h2>FUSIÓN CHEDAR</h2>
             <p>It has survived not only five centuries, but also the leap into the electronic typesetting that followed, remaining essentially unchanged.</p>
+            <h4>PRECIO: </h4>
+           <h4>OFERTA DE MIEMBRO: </h4> 
         </div>
 
     </div>
@@ -139,6 +160,8 @@
         <div class="infoComida">
             <h2>COMBO FRITO</h2>
             <p>It has survived not only five centuries, but also the leap into the electronic typesetting that followed, remaining essentially unchanged.</p>
+            <h4>PRECIO: </h4>
+           <h4>OFERTA DE MIEMBRO: </h4> 
         </div>
 
     </div>
@@ -149,11 +172,13 @@
         <div class="infoComida">
             <h2>ESPECIAL DEL DÍA</h2>
             <p>It has survived not only five centuries, but also the leap into the electronic typesetting that followed, remaining essentially unchanged.</p>
+            <h4>PRECIO: </h4>
+           <h4>OFERTA DE MIEMBRO: </h4> 
         </div>
 
     </div>
 
-</article>
+    </div>
 
     </main>
 
@@ -161,9 +186,17 @@
 
         <h3>SPONSORS</h3>
 
-       <a href="https://www.coca-cola.com.ar/" target="_blank"><img src="../assets/imagen/coca_cola_logo.png"></a>
-       <a href="https://www.nestle.com/" target="_blank"></a><img src="../assets/imagen/nestle_logo.png"></a>
-       <a href="https://www.pepsico.com/" target="_blank"></a><img src="../assets/imagen/pepsico_logo.png"></a>
+    <div class="sponsors">
+
+    <ul>
+
+       <li><a href="https://www.coca-cola.com.ar/" target="_blank"><img src="../assets/imagen/coca_cola_logo.png"></a></li>
+       <li><a href="https://www.nestle.com/" target="_blank"><img src="../assets/imagen/nestle_logo.png"></a></li>
+       <li><a href="https://www.pepsico.com/" target="_blank"><img src="../assets/imagen/pepsico_logo.png"></a></li>
+
+    </ul>
+
+    </div>
 
        <h3>SOCIAL PAGES</h3>
 
