--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/estilos.css">
     <script src="https://kit.fontawesome.com/8b4e42a2cf.js" crossorigin="anonymous"></script>
+    <link rel="shortcut icon" href="../favicom.ico" type="image/x-icon">
     <title>BREAKING BAR</title>
 </head>
 <body>
@@ -26,7 +27,7 @@
 
 <div class="imagenNosotros"></div>
 
-<article>
+<div class="contenedorPrincipal">
 
         <!--Se utilizó Lorem Impzun y nombres aleatorios para las descripciones, en order de ejemplificar como la información estará distribuida para la pre-entrega. Esta se completara para apropiadamente para la entrega final-->
 
@@ -39,24 +40,22 @@
 
         <div class="intro">
 
-            <h1>NUESTRO OBJETIVO</h1>
+            <h2>NUESTRO OBJETIVO</h2>
             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
                 <br>
                 <br>
                 Lorem Ipsum is simply dummy text of the printing and typesetting industry. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
                 <br>
                 <br>
-                <br>
         </div>
 
         <div class="comidas">
 
-            <h1>5 AÑOS DE ESTE SUEÑO</h1>
+            <h2>5 AÑOS DE ESTE SUEÑO</h2>
             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
                 <br>
                 <br>
                 It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-                <br>
                 <br>
                 <br>
         </div>
@@ -75,7 +74,7 @@
 
         <div class="intro">
 
-            <h1>¿QUE ESPERAS PARA VISITARNOS?</h1>
+            <h2>¿QUE ESPERAS PARA VISITARNOS?</h2>
             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
                 <br>
                 <br>
@@ -85,6 +84,8 @@
 
         </div>
 
+    </div>
+
     </main>
 
 
@@ -92,9 +93,17 @@
 
         <h3>SPONSORS</h3>
 
-       <a href="https://www.coca-cola.com.ar/" target="_blank"><img src="../assets/imagen/coca_cola_logo.png"></a>
-       <a href="https://www.nestle.com/" target="_blank"></a><img src="../assets/imagen/nestle_logo.png"></a>
-       <a href="https://www.pepsico.com/" target="_blank"></a><img src="../assets/imagen/pepsico_logo.png"></a>
+    <div class="sponsors">
+
+    <ul>
+
+       <li><a href="https://www.coca-cola.com.ar/" target="_blank"><img src="../assets/imagen/coca_cola_logo.png"></a></li>
+       <li><a href="https://www.nestle.com/" target="_blank"><img src="../assets/imagen/nestle_logo.png"></a></li>
+       <li><a href="https://www.pepsico.com/" target="_blank"><img src="../assets/imagen/pepsico_logo.png"></a></li>
+
+    </ul>
+
+    </div>
 
        <h3>SOCIAL PAGES</h3>
 
