modificacion de la página sucursales para hacerla flexbox. No se añande responsive todavia

--- a/pages/sucursales.html
+++ b/pages/sucursales.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/estilos.css">
     <script src="https://kit.fontawesome.com/8b4e42a2cf.js" crossorigin="anonymous"></script>
+    <link rel="shortcut icon" href="../favicom.ico" type="image/x-icon">
     <title>BREAKING BAR</title>
 </head>
 <body>
@@ -28,13 +29,13 @@
 
         <div class="imagenSucursales"></div>
 
-        <article>
+        <div class="contenedorSucursales">
 
             <h1>SUCURSALES</h1>
 
             <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.<br><br> The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English.<br><br> Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. </p>
 
-        <div class="contenedorSucursales">
+        <div class="sucursales">
 
         <div class="sucursalInfo">
 
@@ -56,7 +57,7 @@
 
         </div>
 
-        <div class="contenedorSucursales">
+        <div class="sucursales">
 
             <div class="sucursalInfo">
     
@@ -85,10 +86,18 @@
 
         <h3>SPONSORS</h3>
 
-       <a href="https://www.coca-cola.com.ar/" target="_blank"><img src="../assets/imagen/coca_cola_logo.png"></a>
-       <a href="https://www.nestle.com/" target="_blank"></a><img src="../assets/imagen/nestle_logo.png"></a>
-       <a href="https://www.pepsico.com/" target="_blank"></a><img src="../assets/imagen/pepsico_logo.png"></a>
+    <div class="sponsors">
 
+    <ul>
+
+       <li><a href="https://www.coca-cola.com.ar/" target="_blank"><img src="../assets/imagen/coca_cola_logo.png"></a></li>
+       <li><a href="https://www.nestle.com/" target="_blank"><img src="../assets/imagen/nestle_logo.png"></a></li>
+       <li><a href="https://www.pepsico.com/" target="_blank"><img src="../assets/imagen/pepsico_logo.png"></a></li>
+
+    </ul>
+
+    </div>
+    
        <h3>SOCIAL PAGES</h3>
 
     <div class="iconBox">
