luego de un primer fallido intento, modifico la seccion de registro/registrate con flexbox. Aun no añado responsive a esta seccion o a ninguna de las anteriores salvo index

--- a/pages/registrate.html
+++ b/pages/registrate.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/estilos.css">
     <script src="https://kit.fontawesome.com/8b4e42a2cf.js" crossorigin="anonymous"></script>
+    <link rel="shortcut icon" href="../favicom.ico" type="image/x-icon">
     <title>BREAKING BAR</title>
 </head>
 <body>
@@ -76,9 +77,17 @@
 
         <h3>SPONSORS</h3>
 
-       <a href="https://www.coca-cola.com.ar/" target="_blank"><img src="../assets/imagen/coca_cola_logo.png"></a>
-       <a href="https://www.nestle.com/" target="_blank"></a><img src="../assets/imagen/nestle_logo.png"></a>
-       <a href="https://www.pepsico.com/" target="_blank"></a><img src="../assets/imagen/pepsico_logo.png"></a>
+    <div class="sponsors">
+
+    <ul>
+
+       <li><a href="https://www.coca-cola.com.ar/" target="_blank"><img src="../assets/imagen/coca_cola_logo.png"></a></li>
+       <li><a href="https://www.nestle.com/" target="_blank"><img src="../assets/imagen/nestle_logo.png"></a></li>
+       <li><a href="https://www.pepsico.com/" target="_blank"><img src="../assets/imagen/pepsico_logo.png"></a></li>
+
+    </ul>
+
+    </div>
 
        <h3>SOCIAL PAGES</h3>
 
