modificaciones en el nav/header de cada pagina

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header>
-        <div class="logo"><a href="./index.html"><img src="./assets/imagen/logo.png"></a></div>
+        <div class="logo"><a href="index.html"><img src="./assets/imagen/logo.png"></a></div>
         <nav>
             <ul>
                 <li><a href="./pages/menu.html">MENU</a></li>
