--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -14,12 +14,12 @@
     <header>
         <div class="logo"><a href="../index.html"><img src="../assets/imagen/logo.png"></a></div>
         <nav>
-            <ul>
-                <li><a href="./menu.html">MENÚ</a></li>
-                <li><a href="./nosotros.html">NOSOTROS</a></li>
-                <li><a href="./sucursales.html">SUCURSALES</a></li>
-                <li><a href="./registrate.html">REGISTRATE</a></li>
-            </ul>
+          <ul>
+            <li><a href="menu.html">MENÚ</a></li>
+            <li><a href="nosotros.html">NOSOTROS</a></li>
+            <li><a href="sucursales.html">SUCURSALES</a></li>
+            <li><a href="registrate.html">REGISTRATE</a></li>
+        </ul>
         </nav>
 
     </header>
