--- a/pages/sucursales.html
+++ b/pages/sucursales.html
@@ -14,10 +14,10 @@
         <div class="logo"><a href="../index.html"><img src="../assets/imagen/logo.png"></a></div>
         <nav>
             <ul>
-                <li><a href="./menu.html">MENÚ</a></li>
-                <li><a href="./nosotros.html">NOSOTROS</a></li>
-                <li><a href="./sucursales.html">SUCURSALES</a></li>
-                <li><a href="./registrate.html">REGISTRATE</a></li>
+                <li><a href="menu.html">MENÚ</a></li>
+                <li><a href="nosotros.html">NOSOTROS</a></li>
+                <li><a href="sucursales.html">SUCURSALES</a></li>
+                <li><a href="registrate.html">REGISTRATE</a></li>
             </ul>
         </nav>
 
