Pequeño cambio en el nav de index y cambio de imágen en la sección menu

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="logo"><a href="index.html"><img src="./assets/imagen/logo.png"></a></div>
         <nav>
             <ul>
-                <li><a href="./pages/menu.html">MENU</a></li>
+                <li><a href="./pages/menu.html">MENÚ</a></li>
                 <li><a href="./pages/nosotros.html">NOSOTROS</a></li>
                 <li><a href="./pages/sucursales.html">SUCURSALES</a></li>
                 <li><a href="./pages/registrate.html">REGISTRATE</a></li>
