Modificaciones a nosotros, registrate y sucursales con bootstrap y responsive.

--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -83,73 +83,22 @@
           </div>
         <div class="col-xl-6 col-lg-7 col-12">
 
-                <h2>NUESTRO OBJETIVO</h2>
-                <p>Breaking Bar, busca expandirse y poder llegar a brindar sus servicios a toda la Capital Federal antes de expandirnos por toda la Provicia de Buenos Aires. Este será nuestro primer objetivo a cumplir antes de intentar expandirnos a nivel nacional, estableciendo sucursales en provincias cerncanas a la provicia de Buenos Aires como Cordoba, Entre Rios y Santa Fe.</p>
+                <h2>¿QUÉ ESPERAS PARA SER PARTE?</h2>
 
+                <p>Platos suculentos, un ambiente familiar, eventos mensuales, buenos precios y toda clases de referencias hacia una de las mejores series de televisión jamas creadas. Qué mas se puede pedir?
+                  <br>
+                  <br>
+                  Ven a visitarnos en cualquiera de las dos sucursales con las que Breaking Bar cuenta, además de convertirte en parte de nuestro crecimiento y disfruta los beneficios!
+                  <br>
+                  <br>
+                  Te estamos esperando.
+                </p>
+                
         </div>
 
       </div>
 
     </div>
-
-        <!--Se utilizó Lorem Impzun y nombres aleatorios para las descripciones, en order de ejemplificar como la información estará distribuida para la pre-entrega. Esta se completara para apropiadamente para la entrega final-->
-
-
-       <!-- <div class="intro">
-
-            <img src="../assets/imagen/nosotros1.jpg">
-
-        </div>
-
-        <div class="intro">
-
-            <h2>NUESTRO OBJETIVO</h2>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
-                <br>
-                <br>
-                Lorem Ipsum is simply dummy text of the printing and typesetting industry. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-                <br>
-                <br>
-        </div>
-
-        <div class="comidas">
-
-            <h2>5 AÑOS DE ESTE SUEÑO</h2>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
-                <br>
-                <br>
-                It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-                <br>
-                <br>
-        </div>
-
-        <div class="comidas">
-            
-            <iframe src="../assets/video/video_somos.mp4"></iframe>
-
-        </div>
-
-        <div class="intro">
-
-            <img src="../assets/imagen/nosotros3.jpg">
-
-        </div>
-
-        <div class="intro">
-
-            <h2>¿QUE ESPERAS PARA VISITARNOS?</h2>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
-                <br>
-                <br>
-                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-                <br>
-                <br>
-
-        </div>
-
-    </div>
-
-    -->
 
     </main>
 
