--- a/pages/registrate.html
+++ b/pages/registrate.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css"
+        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/estilos.css">
     <script src="https://kit.fontawesome.com/8b4e42a2cf.js" crossorigin="anonymous"></script>
     <link rel="shortcut icon" href="../favicom.ico" type="image/x-icon">
     <title>BREAKING BAR</title>
 </head>
+
 <body>
     <header>
         <div class="logo"><a href="../index.html"><img src="../assets/imagen/logo.png"></a></div>
@@ -30,46 +34,48 @@
 
         <div class="imagenRegistrate">
 
-<div class="registrateContenedor">
+            <div class="registrateContenedor">
 
-            <h2>REGISTRATE</h2>
+                <h2>REGISTRATE</h2>
 
-            <p>Mejor llama a Saul, y que te cuente que tan bueno es el helado que obtuvo gracias a los beneficio para miembros. Completa este pequeño formulario y disfruta los benefios!</p>
+                <p>Mejor llama a Saul, y que te cuente que tan bueno es el helado que obtuvo gracias a los beneficio
+                    para miembros. Completa este pequeño formulario y disfruta los benefios!</p>
 
-            <form>
-                <label for="name">NOMBRE</label><br>
-                <input type="text" id="nombre" name="nombre"><br><br>
-                <label for="telefono">TELÉFONO</label><br>
-                <input type="telefono" id="telefono" name="telefono"><br><br>
-                <label for="email">E-MAIL</label><br>
-                <input type="email" id="email" name="email"><br><br>
-                <input class="submit" type="submit" value="Submit">
-            </form>
+                <form>
+                    <label for="name">NOMBRE</label><br>
+                    <input type="text" id="nombre" name="nombre"><br><br>
+                    <label for="telefono">TELÉFONO</label><br>
+                    <input type="telefono" id="telefono" name="telefono"><br><br>
+                    <label for="email">E-MAIL</label><br>
+                    <input type="email" id="email" name="email"><br><br>
+                    <input class="submit" type="submit" value="Submit">
+                </form>
+
+            </div>
 
         </div>
 
-    </div>
-
-<div class="beneficiosRegistroContenedor">
+        <div class="beneficiosRegistroContenedor">
 
 
-<h3>¿QUÉ BENEFICIOS PUEDES TENER AL REGISTRARTE?</h3>
+            <h3>¿QUÉ BENEFICIOS PUEDES TENER AL REGISTRARTE?</h3>
 
-<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
-    <br>
-    <br>
-    It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. </p>
+            <p>Hacerse miembro de Breaking Bar mediante esta página web no es solo beneficioso para nosotros. Registrandoté, podrás de disfrutar de multiples beneficios y ventajas que podrian ser de tu interes. 
+                <br>
+                <br>
+            A continuación podrás observar que beneficios puedes gozar y constatar que no son puro humo.
+            </p>
 
-    <ul class="listaBeneficios">
-        <li>It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</li>
-        <li>It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</li>
-        <li>It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</li>
-        <li>It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</li>
-        <li>It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</li>
-        <li>It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</li>
-    </ul>
+            <ul class="listaBeneficios">
+                <li>Podras recibir notificaciones de eventos especiales que tendran lugar en cualquiera de las dos sucursales</li>
+                <li>Recibiras un descuento en cada orden que realizes. Solamente validas para aquellos que se registran</li>
+                <li>Tendras prioridad en la reservación de mesas para almuerzos y cenas</li>
+                <li>Recibiras promociones y todo tipo de ofertas</li>
+                <li>Podrás participar de sorteos y premios que se realizan todos los meses en el bar</li>
+                <li>Tendras acceso a los trajes de 'cocineros' que aparecen en la serie y utilizarlos dentro del bar.</li>
+            </ul>
 
-</div>
+        </div>
 
     </main>
 
@@ -77,28 +83,37 @@
 
         <h3>SPONSORS</h3>
 
-    <div class="sponsors">
+        <div class="container">
+            <div class="row sponsors">
+                <div class="col-lg-4 col-4"><a href="https://www.coca-cola.com.ar/" target="_blank"><img
+                            src="../assets/imagen/coca_cola_logo.png"></a></div>
+                <div class="col-lg-4 col-4"><a href="https://www.nestle.com/" target="_blank"><img
+                            src="../assets/imagen/nestle_logo.png"></a></div>
+                <div class="col-lg-4 col-4"><a href="https://www.pepsico.com/" target="_blank"><img
+                            src="../assets/imagen/pepsico_logo.png"></a></div>
+            </div>
+        </div>
 
-    <ul>
+        <h3 class="socialPages">SOCIAL PAGES</h3>
 
-       <li><a href="https://www.coca-cola.com.ar/" target="_blank"><img src="../assets/imagen/coca_cola_logo.png"></a></li>
-       <li><a href="https://www.nestle.com/" target="_blank"><img src="../assets/imagen/nestle_logo.png"></a></li>
-       <li><a href="https://www.pepsico.com/" target="_blank"><img src="../assets/imagen/pepsico_logo.png"></a></li>
+        <div class="iconBox">
 
-    </ul>
+            <a href="https://www.facebook.com/people/Breaking-Bar-Moreno/100061212710180/" target="_blank"><i
+                    class="socialIcons fa-brands fa-facebook fa-3x fa-fade"></i></a>
+            <a href="https://twitter.com/breakingbar3" target="_blank"><i
+                    class="socialIcons fa-brands fa-twitter fa-3x fa-fade"></i></a>
+            <a href="https://www.instagram.com/breakingbar.arg/" target="_blank"><i
+                    class="socialIcons fa-brands fa-instagram fa-3x fa-fade"></i></a>
 
-    </div>
+        </div>
 
-       <h3>SOCIAL PAGES</h3>
+        <h5>COPYRIGHT ESTEBAN CORLETTI 2023</h5>
 
-    <div class="iconBox">
-        <a href="https://www.facebook.com/people/Breaking-Bar-Moreno/100061212710180/" target="_blank"><i class="socialIcons fa-brands fa-facebook fa-3x fa-fade"></i></a>
-        <a href="https://twitter.com/breakingbar3" target="_blank"><i class="socialIcons fa-brands fa-twitter fa-3x fa-fade"></i></a>
-        <a href="https://www.instagram.com/breakingbar.arg/" target="_blank"><i class="socialIcons fa-brands fa-instagram fa-3x fa-fade"></i></a>
-    </div>
-
-    <h5>COPYRIGHT ESTEBAN CORLETTI 2023</h5>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+            crossorigin="anonymous"></script>
 
     </footer>
 </body>
+
 </html>
