Pequeño arreglo 'estetico' en los codigos del menu.html

--- a/pages/menu.html
+++ b/pages/menu.html
@@ -306,7 +306,7 @@
                   como en la serie.</p>
                 <h6 class="card-prize">PRECIO: 950 00 ARS</h6>
               </div>
-              <div class="card-footer">
+              <div class="cardgit-footer">
                 <small class="text-muted">PROMO MIEMBRO: 400 00 ARS</small>
               </div>
             </div>
