--- a/pages/menu.html
+++ b/pages/menu.html
@@ -26,9 +26,9 @@
     </nav>
   </header>
 
-  <main>
+  <main class="menu">
 
-    <div class="imagenMenu"></div>
+    <div class="imagenMenu"><img src="../assets/imagen/menu_principal.jpeg"></div>
 
     <div class="contenedorMenu">
 
