modificacion en el menu, con sass

--- a/pages/menu.html
+++ b/pages/menu.html
@@ -49,7 +49,7 @@
 
       <div class="row row-cols-1 row-cols-md-3">
         <div class="col-xl-4 col-lg-6 col-md-6 cards">
-          <div class="card h-100">
+          <div class="card h-100 cardStyle">
             <img src="../assets/imagen/comida_1.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">CHIFRIJO</h5>
@@ -290,11 +290,9 @@
 
       </div>
 
-      <div class="especiales">
+      <div class="postres">
 
         <h3>POSTRES</h3>
-
-        <p></p>
 
         <div class="row row-cols-1 row-cols-md-3 g-4">
           <div class="col-xl-4 col-lg-6 col-md-6 cards">
