Cambios en Sucursales y Registrate

--- a/pages/registrate.html
+++ b/pages/registrate.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/estilos.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/8b4e42a2cf.js" crossorigin="anonymous"></script>
     <link rel="shortcut icon" href="../favicom.ico" type="image/x-icon">
     <title>BREAKING BAR</title>
@@ -27,7 +30,7 @@
 
     </header>
 
-    <main>
+    <main class="registrate">
 
         <!--Se utilizó Lorem Impzun y nombres aleatorios para las descripciones, en order de ejemplificar como la información estará distribuida para la pre-entrega. Esta se completara para apropiadamente para la entrega final-->
 
@@ -39,15 +42,15 @@
                 <h2>REGISTRATE</h2>
 
                 <p>Mejor llama a Saul, y que te cuente que tan bueno es el helado que obtuvo gracias a los beneficio
-                    para miembros. Completa este pequeño formulario y disfruta los benefios!</p>
+                    para miembros. Completa este pequeño formulario y disfruta todos los benefios!</p>
 
                 <form>
-                    <label for="name">NOMBRE</label><br>
-                    <input type="text" id="nombre" name="nombre"><br><br>
-                    <label for="telefono">TELÉFONO</label><br>
-                    <input type="telefono" id="telefono" name="telefono"><br><br>
-                    <label for="email">E-MAIL</label><br>
-                    <input type="email" id="email" name="email"><br><br>
+                    <label for="name">NOMBRE</label>
+                    <input type="text" id="nombre" name="nombre">
+                    <label for="telefono">TELÉFONO</label>
+                    <input type="telefono" id="telefono" name="telefono">
+                    <label for="email">E-MAIL</label>
+                    <input type="email" id="email" name="email">
                     <input class="submit" type="submit" value="Submit">
                 </form>
 
