--- a/pages/sucursales.html
+++ b/pages/sucursales.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/estilos.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/8b4e42a2cf.js" crossorigin="anonymous"></script>
     <link rel="shortcut icon" href="../favicom.ico" type="image/x-icon">
     <title>BREAKING BAR</title>
@@ -27,23 +30,27 @@
 
     </header>
 
-    <main>
+    <main class="sucursales">
 
-        <div class="imagenSucursales"></div>
+        <div class="imagenSucursales"><img src="../assets/imagen/sucursales_background.jpg"></div>
 
-        <div class="contenedorSucursales">
+        <article class="intro_sucursales">
 
             <h1>SUCURSALES</h1>
 
             <p>Hoy en día la cadena Breaking Bar cuenta con tan solo dos sucursales localizadas en Provincia de Buenos
                 Aires. Aquí abajo podras encontrar tanto su dirección para visitarla o el telefono para poder solicitar
-                un delivery.<br><br>
-                Proximamente, podremos añadir mas sucursales a nuestro haber no solo en Provincia de Buenos Aires sino
+                un delivery.</p>
+            <p> Proximamente, podremos añadir mas sucursales a nuestro haber no solo en Provincia de Buenos Aires sino
                 en Capital Federal. Esta última contara con sucursales en Caballito y Devoto, mientras que en Provincia
                 ya nos encontramos trabajando en una futura sucursal en San Martín y Villa Lynch.
             </p>
 
-            <div class="sucursales">
+        </article>
+
+        <section class="seccion_sucursales">
+
+            <div class="contenedor_moreno">
 
                 <div class="container">
                     <div class="row">
@@ -54,27 +61,27 @@
                             <div class="sucursal">
 
                                 <div class="sucursalInfo">
-                                    <h6>OPCIONES DE SERVICIO:</h6>
-                                    <p>Consumo en el lugar · Retiros en la puerta · Entrega a domicilio</p>
+                                    <h4>OPCIONES DE SERVICIO:</h4>
+                                    <h5>Consumo en el lugar · Retiros en la puerta del domicilio · Entrega a domicilio</h5>
                                 </div>
 
                                 <div class="sucursalInfo">
-                                    <h6>DIRECCIÓN:</h6>
-                                    <p>Concejal Alberto Rosset 191, B1744 Moreno, Provincia de Buenos Aires</p>
-
-                                </div>
-
-                                <div class="sucursalInfo">
-
-                                    <h6>HORAS:</h6>
-                                    <p>17:00PM a 01:00AM</p>
+                                    <h4>DIRECCIÓN:</h4>
+                                    <h5>Concejal Alberto Rosset 191, B1744 Moreno, Provincia de Buenos Aires</>
 
                                 </div>
 
                                 <div class="sucursalInfo">
 
-                                    <h6>TELÉFONO:</h6>
-                                    <p>011 3512-3224</p>
+                                    <h4>HORAS:</h4>
+                                    <h5>17:00PM a 01:00AM</h5>
+
+                                </div>
+
+                                <div class="sucursalInfo">
+
+                                    <h4>TELÉFONO:</h4>
+                                    <h5>011 3512-3224</h5>
 
                                 </div>
                             </div>
@@ -95,38 +102,38 @@
             </div>
 
 
-            <div class="sucursales">
+            <div class="contenedor_isidro_casanova">
 
                 <div class="container">
                     <div class="row">
                         <div class="col-xl-6 col-lg-6 col-12">
 
-                            <h3>BREAKING BAR - ISIDRO CASANOVA</h3>
+                            <h2>BREAKING BAR - ISIDRO CASANOVA</h2>
 
-                            <div class="sucursal">
+                            <div class="sucursal_isidro_casanova">
 
-                                <div class="sucursalInfo">
-                                    <h6>OPCIONES DE SERVICIO:</h6>
-                                    <p>Consumo en el lugar · Retiros en la puerta · Entrega a domicilio</p>
+                                <div class="sucursalInfo_isidro_casanova">
+                                    <h4>OPCIONES DE SERVICIO:</h4>
+                                    <h5>Consumo en el lugar · Retiros en la puerta del domicilio · Entrega a domicilio</h5>
                                 </div>
 
-                                <div class="sucursalInfo">
-                                    <h6>DIRECCIÓN:</h6>
-                                    <p>LEM, Guillermo Marconi 3520, B1765 Isidro Casanova, Provincia de Buenos Aires</p>
-
-                                </div>
-
-                                <div class="sucursalInfo">
-
-                                    <h6>HORAS:</h6>
-                                    <p>10:00AM a 01:00AM</p>
+                                <div class="sucursalInfo_isidro_casanova">
+                                    <h4>DIRECCIÓN:</h4>
+                                    <h5>LEM, Guillermo Marconi 3520, B1765 Isidro Casanova, Provincia de Buenos Aires</h5>
 
                                 </div>
 
+                                <div class="sucursalInfo_isidro_casanova">
+
+                                    <h4>HORAS:</h4>
+                                    <h5>10:00AM a 01:00AM</h5>
+
+                                </div>
+
                                 <div class="sucursalInfo">
 
-                                    <h6>TELÉFONO:</h6>
-                                    <p>011 3085-2541</p>
+                                    <h4>TELÉFONO:</h4>
+                                    <h5>011 3085-2541</h5>
 
                                 </div>
                             </div>
@@ -145,7 +152,7 @@
 
             </div>
 
-
+        </section>
 
             <!--
         <div class="sucursales">
@@ -172,7 +179,6 @@
 
     -->
 
-            </article>
 
     </main>
 
