Inclusion de mixins, extend, anidaciones y animaciones

--- a/pages/registrate.html
+++ b/pages/registrate.html
@@ -13,12 +13,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/8b4e42a2cf.js" crossorigin="anonymous"></script>
     <link rel="shortcut icon" href="../favicom.ico" type="image/x-icon">
-    <title>BREAKING BAR</title>
+    <title>REGISTRO - Breaking Bar</title>
 </head>
 
 <body>
     <header>
-        <div class="logo"><a href="../index.html"><img src="../assets/imagen/logo.png"></a></div>
+        <div class="logo"><a href="../index.html"><img src="../assets/imagen/logo.png"
+                    alt="Saul, el personaje de la serie tomando un helado"></a></div>
         <nav>
             <ul>
                 <li><a href="menu.html">MENÚ</a></li>
@@ -32,14 +33,12 @@
 
     <main class="registrate">
 
-        <!--Se utilizó Lorem Impzun y nombres aleatorios para las descripciones, en order de ejemplificar como la información estará distribuida para la pre-entrega. Esta se completara para apropiadamente para la entrega final-->
-
 
         <div class="imagenRegistrate">
 
             <div class="registrateContenedor">
 
-                <h2>REGISTRATE</h2>
+                <h1>REGISTRATE</h1>
 
                 <p>Mejor llama a Saul, y que te cuente que tan bueno es el helado que obtuvo gracias a los beneficio
                     para miembros. Completa este pequeño formulario y disfruta todos los benefios!</p>
@@ -51,53 +50,56 @@
                     <input type="telefono" id="telefono" name="telefono">
                     <label for="email">E-MAIL</label>
                     <input type="email" id="email" name="email">
-                    <input class="submit" type="submit" value="Submit">
+                    <input class="submit" type="submit" value="SUBMIT">
                 </form>
 
             </div>
 
         </div>
 
-        <div class="beneficiosRegistroContenedor">
+        <section class="beneficios_registro--contenedor">
 
 
-            <h3>¿QUÉ BENEFICIOS PUEDES TENER AL REGISTRARTE?</h3>
+            <h2>¿QUÉ BENEFICIOS PUEDES TENER AL REGISTRARTE?</h2>
 
-            <p>Hacerse miembro de Breaking Bar mediante esta página web no es solo beneficioso para nosotros. Registrandoté, podrás de disfrutar de multiples beneficios y ventajas que podrian ser de tu interes. 
-                <br>
-                <br>
-            A continuación podrás observar que beneficios puedes gozar y constatar que no son puro humo.
+            <p>Hacerse miembro de Breaking Bar mediante esta página web no es solo beneficioso para nosotros.
+                Registrandoté, podrás de disfrutar de multiples beneficios y ventajas que podrian ser de tu interes.</p>
+
+            <p>A continuación podrás observar que beneficios puedes gozar y constatar que no son puro humo.
             </p>
 
-            <ul class="listaBeneficios">
-                <li>Podras recibir notificaciones de eventos especiales que tendran lugar en cualquiera de las dos sucursales</li>
-                <li>Recibiras un descuento en cada orden que realizes. Solamente validas para aquellos que se registran</li>
+            <ul class="lista_beneficios">
+                <li>Podras recibir notificaciones de eventos especiales que tendran lugar en cualquiera de las dos
+                    sucursales</li>
+                <li>Recibiras un descuento en cada orden que realizes. Solamente validas para aquellos que se registran
+                </li>
                 <li>Tendras prioridad en la reservación de mesas para almuerzos y cenas</li>
                 <li>Recibiras promociones y todo tipo de ofertas</li>
                 <li>Podrás participar de sorteos y premios que se realizan todos los meses en el bar</li>
-                <li>Tendras acceso a los trajes de 'cocineros' que aparecen en la serie y utilizarlos dentro del bar.</li>
+                <li>Tendras acceso a los trajes de 'cocineros' que aparecen en la serie y utilizarlos dentro del bar.
+                </li>
             </ul>
 
-        </div>
+        </section>
 
     </main>
 
     <footer>
 
-        <h3>SPONSORS</h3>
+        <h4>SPONSORS</h4>
 
-        <div class="container">
+        <div class="container_footer">
             <div class="row sponsors">
                 <div class="col-lg-4 col-4"><a href="https://www.coca-cola.com.ar/" target="_blank"><img
-                            src="../assets/imagen/coca_cola_logo.png"></a></div>
+                            src="../assets/imagen/coca_cola_logo.png" alt="Logo de la compania Coca Cola"></a></div>
                 <div class="col-lg-4 col-4"><a href="https://www.nestle.com/" target="_blank"><img
-                            src="../assets/imagen/nestle_logo.png"></a></div>
+                            src="../assets/imagen/nestle_logo.png" alt="Logo de la Compania Nestle"></a></div>
                 <div class="col-lg-4 col-4"><a href="https://www.pepsico.com/" target="_blank"><img
-                            src="../assets/imagen/pepsico_logo.png"></a></div>
+                            src="../assets/imagen/pepsico_logo.png" alt="Logo de la Compania Pepsico"></a></div>
             </div>
         </div>
 
-        <h3 class="socialPages">SOCIAL PAGES</h3>
+        <h4 class="socialPages">SOCIAL PAGES</h4>
 
         <div class="iconBox">
 
@@ -110,13 +112,18 @@
 
         </div>
 
+
         <h5>COPYRIGHT ESTEBAN CORLETTI 2023</h5>
 
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-            crossorigin="anonymous"></script>
-
     </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
+
+</body>
+
+</html>
 </body>
 
 </html>
