--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description"
+        content="Un lugar para los aficionados de la serie de televisión Breaking Bad y la buena comida a buen precio. Descubre todo lo que el bar Breaking Bar tiene para ofrecerte">
+    <meta name="keywords" content="COMIDA, EVENTOS, FIESTAS, BREAKING BAR, MORENO, ISIDRO CASANOVA">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/estilos.css">
@@ -13,12 +16,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/8b4e42a2cf.js" crossorigin="anonymous"></script>
     <link rel="shortcut icon" href="./favicom.ico" type="image/x-icon">
-    <title>BREAKING BAR</title>
+    <title>Breaking Bar - INICIO</title>
 </head>
 
 <body>
     <header>
-        <div class="logo"><a href="index.html"><img src="./assets/imagen/logo.png"></a></div>
+        <div class="logo"><a href="index.html"><img src="./assets/imagen/logo.png" alt="Logo de Breaking Bar"></a></div>
         <nav>
             <ul>
                 <li><a href="./pages/menu.html">MENÚ</a></li>
@@ -31,82 +34,81 @@
     </header>
 
     <main>
-        <div class="imagenPrincipal"><img src="./assets/imagen/entrada.png"></div>
+        <div class="imagenPrincipal"><img src="./assets/imagen/entrada.png" alt="Cartel de sucursal Breaking Bar"></div>
 
-        <div class="container">
-            <div class="row">
+        <section class="container">
+            <div class="row introNosotros">
                 <div class="col-xl-6 col-lg-5 col-12">
-                    <div class="intro">
+                    <div class="imagen_intro--nosotros">
 
-                        <img src="./assets/imagen/bar.jpg">
+                        <img src="./assets/imagen/bar.jpg" alt="Sucursal Breaking Bar Moreno">
 
                     </div>
                 </div>
-                <div class="col-xl-6 col-lg-7 col-12">
+                <div class="col-xl-6 col-lg-7 col-12 quienes_somos">
 
-                    <h2>QUEREMOS HACER UN IMPERIO</h2>
+                    <h2>¿QUIÉNES SOMOS?</h2>
                     <p>Como un tal Walter Wide, nuestro inicio fue sensillo como un pequeño bar con temática sobre la
                         popular serie de televisión Breaking Bad. Luego de cinco años, ahora tenemos dos sucursales y
-                        cada día cuenta con mas clientes que se han vuelto parte de nuestra familia.
-                        <br>
-                        <br>
-                        Sin embargo, esto es solo el inicio. Tenemos grandes objetivos y planes a alcanzar, de los
+                        cada día cuenta con mas clientes que se han vuelto parte de nuestra familia.</p>
+
+                    <p>Sin embargo, esto es solo el inicio. Tenemos grandes objetivos y planes a alcanzar, de los
                         cuales tu puedes ser parte. Quieres saber cómo?
                     </p>
                     <a href="./pages/nosotros.html">
-                        <h4>¡CONOCE MAS!</h4>
+                        <h3>¡CONOCE MAS!</h3>
                     </a>
                     <br>
                 </div>
 
                 <div class="row introMenu">
-                    <div class="col-xl-6 col-lg-7">
+                    <div class="col-xl-6 col-lg-7 ordernar_intro">
 
                         <h2>¿QUÉ PUEDO ORDERNAR?</h2>
                         <p>Desde entradas como picadas y ensaladas pasando por platos clásicos como napolitana con
                             fritas y, por supuesto, postres como helados y flanes. Todo lo que busques para un buen
-                            almuerzo/cena lo vas a encontrar.
-                            <br>
-                            <br>
-                            Pero eso no es todo. En nuesto catálogo de menus, podras encontrar platos especiales con
-                            temática de la serie Breaking Bad. Te interesa saber mas sobre lo que puedes ordenar?
-                            <br>
-                            <br>
-                            <a href="./pages/helados.html">
-                                <h4>¡OBSERVA NUESTRA MERCANCIA!</h4>
-                            </a>
-                            <br>
+                            almuerzo/cena lo vas a encontrar.</p>
+
+                        <p>Pero eso no es todo. En nuesto catálogo de menus, podras encontrar platos especiales con
+                            temática de la serie Breaking Bad. Te interesa saber mas sobre lo que puedes ordenar?</p>
+                        <a href="./pages/helados.html">
+                            <h3>¡OBSERVA NUESTRA MERCANCIA!</h3>
+                        </a>
+                        <br>
 
                     </div>
                     <div class="col-xl-6 col-lg-5">
-                        <div class="intro">
+                        <div class="imagen_intro--menu">
 
-                            <img src="./assets/imagen/comidas.jpg">
+                            <img src="./assets/imagen/comidas.jpg"
+                                alt="Breaking hamburgesa con guarnición de papas fritas">
 
                         </div>
 
                     </div>
 
                 </div>
+            </div>
+        </section>
 
     </main>
 
     <footer>
 
-        <h3>SPONSORS</h3>
+        <h4>SPONSORS</h4>
 
-        <div class="container">
+        <div class="container_footer">
             <div class="row sponsors">
                 <div class="col-lg-4 col-4"><a href="https://www.coca-cola.com.ar/" target="_blank"><img
-                            src="./assets/imagen/coca_cola_logo.png"></a></div>
+                            src="./assets/imagen/coca_cola_logo.png" alt="Logo de la compania Coca Cola"></a></div>
                 <div class="col-lg-4 col-4"><a href="https://www.nestle.com/" target="_blank"><img
-                            src="./assets/imagen/nestle_logo.png"></a></div>
+                            src="./assets/imagen/nestle_logo.png" alt="Logo de la Compania Nestle"></a></div>
                 <div class="col-lg-4 col-4"><a href="https://www.pepsico.com/" target="_blank"><img
-                            src="./assets/imagen/pepsico_logo.png"></a></div>
+                            src="./assets/imagen/pepsico_logo.png" alt="Logo de la Compania Pepsico"></a></div>
             </div>
         </div>
 
-        <h3 class="socialPages">SOCIAL PAGES</h3>
+        <h4 class="socialPages">SOCIAL PAGES</h4>
 
         <div class="iconBox">
 
