--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -8,14 +8,17 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css"
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <link rel="stylesheet" href="../css/estilos.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/8b4e42a2cf.js" crossorigin="anonymous"></script>
   <link rel="shortcut icon" href="../favicom.ico" type="image/x-icon">
-  <title>BREAKING BAR</title>
+  <title>NOSOTROS - Breaking Bar</title>
 </head>
 
 <body>
   <header>
-    <div class="logo"><a href="../index.html"><img src="../assets/imagen/logo.png"></a></div>
+    <div class="logo"><a href="../index.html"><img src="../assets/imagen/logo.png" alt="Logo de Breaking Bar"></a></div>
     <nav>
       <ul>
         <li><a href="menu.html">MENÚ</a></li>
@@ -27,112 +30,106 @@
 
   </header>
 
-  <main>
+  <main class="nosotros">
 
-    <div class="imagenNosotros"></div>
+    <div class="imagenNosotros"><img src="../assets/imagen/nosotros_background.jpg"
+        alt="Hall con varias pinturas de personajes y momentos de la serie Breaking Bar."></div>
 
-    <div class="contenedorPrincipal">
+    <section class="contenedor_nosotros">
 
-      <div class="container">
-        <div class="row objetivo">
-          <div class="col-xl-6 col-lg-5 col-12">
-            <div class="intro">
+      <div class="row objetivo">
+        <div class="col-xl-6 col-lg-5 col-12">
+          <div class="nosotros_imagen--objetivo">
 
-              <img src="../assets/imagen/nosotros1.jpg">
-
-            </div>
-          </div>
-          <div class="col-xl-6 col-lg-7 col-12">
-
-            <h2>NUESTRO OBJETIVO</h2>
-            <p>Breaking Bar, busca expandirse y poder llegar a brindar sus servicios a toda la Capital Federal antes de
-              expandirnos por toda la Provicia de Buenos Aires. Este será nuestro primer objetivo a cumplir antes de
-              intentar expandirnos a nivel nacional, estableciendo sucursales en provincias cerncanas a la provicia de
-              Buenos Aires como Cordoba, Entre Rios y Santa Fe.
-              <br>
-              <br>
-              Tu puedes ser parte de esto expansión y ayudarnos a alcanzar estos objetivos en un futuro cercano. Cómo?
-              Simple, se parte de nuestra clientela y disfruta todo lo que podemos ofrecer!
-            </p>
+            <img src="../assets/imagen/nosotros1.jpg">
 
           </div>
+        </div>
+        <div class="col-xl-6 col-lg-7 col-12 quienes_somos">
+
+          <h1>NUESTRO OBJETIVO</h1>
+          <p>Breaking Bar, busca expandirse y poder llegar a brindar sus servicios a toda la Capital Federal antes de
+            expandirnos por toda la Provicia de Buenos Aires. Este será nuestro primer objetivo a cumplir antes de
+            intentar expandirnos a nivel nacional, estableciendo sucursales en provincias cerncanas a la provicia de
+            Buenos Aires como Cordoba, Entre Rios y Santa Fe.</p>
+          <p>Tu puedes ser parte de esto expansión y ayudarnos a alcanzar estos objetivos en un futuro cercano. Cómo?
+            Simple, se parte de nuestra clientela y disfruta todo lo que podemos ofrecer!
+          </p>
 
         </div>
 
-        <div class="row video">
-          <div class="col-xl-6 col-lg-7 col-12">
-            <div class="intro">
+      </div>
 
-              <h2>CINCO AÑOS DE ESTE SUEÑO</h2>
-              <p>Parece como si hubiese sido ayer, sin embargo ya son cinco años de aquel 2018 donde Breaking Bar nació.
-                En aquel entonces solo era un pequeño bar de barrio que tenía la particularidad de tener una temática de
-                Breaking Bad y ahora contamos con dos sucursales y estamos en etapa de expansión.
-                <br>
-                <br>
-                Todo esto no podría haber sido posible gracias a todos aquellos quienes nos apoyaron y se convirtieron
-                en parte de este crecimiento. A todos les damos las gracias y prometemos que en cinco años seremos
-                todavia mas grandes.
-              </p>
+      <div class="row video">
+        <div class="col-xl-6 col-lg-7 col-12 texto_video">
 
-            </div>
-          </div>
-          <div class="col-xl-6 col-lg-5 col-12">
+          <h2>CINCO AÑOS DE ESTE SUEÑO</h2>
+          <p>Parece como si hubiese sido ayer, sin embargo ya son cinco años de aquel 2018 donde Breaking Bar nació.
+            En aquel entonces solo era un pequeño bar de barrio que tenía la particularidad de tener una temática de
+            Breaking Bad y ahora contamos con dos sucursales y estamos en etapa de expansión.</p>
+          <p>
+            Todo esto no podría haber sido posible gracias a todos aquellos quienes nos apoyaron y se convirtieron
+            en parte de este crecimiento. A todos les damos las gracias y prometemos que en cinco años seremos
+            todavia mas grandes.
+          </p>
 
-            <iframe src="../assets/video/video_somos.mp4"></iframe>
+        </div>
+        <div class="col-xl-6 col-lg-5 col-12">
 
-          </div>
+          <iframe src="../assets/video/video_somos.mp4"></iframe>
 
         </div>
 
-        <div class="container">
-          <div class="row objetivo">
-            <div class="col-xl-6 col-lg-5 col-12">
-              <div class="intro">
+      </div>
 
-                <img src="../assets/imagen/nosotros3.jpg">
+      <div class="row objetivo">
+        <div class="col-xl-6 col-lg-5 col-12">
+          <div class="nosotros_imagen--objetivo">
 
-              </div>
-            </div>
-            <div class="col-xl-6 col-lg-7 col-12">
-
-              <h2>¿QUÉ ESPERAS PARA SER PARTE?</h2>
-
-              <p>Platos suculentos, un ambiente familiar, eventos mensuales, buenos precios y toda clases de referencias
-                hacia una de las mejores series de televisión jamas creadas. Qué mas se puede pedir?
-                <br>
-                <br>
-                Ven a visitarnos en cualquiera de las dos sucursales con las que Breaking Bar cuenta, además de
-                convertirte en parte de nuestro crecimiento y disfruta los beneficios!
-                <br>
-                <br>
-                Te estamos esperando.
-              </p>
-
-            </div>
+            <img src="../assets/imagen/nosotros3.jpg" alt="Sede de Breaking Bar en Isidro Casanova">
 
           </div>
+        </div>
+        <div class="col-xl-6 col-lg-7 col-12 te_esperamos">
+
+          <h3>¿QUÉ ESPERAS PARA SER PARTE?</h3>
+
+          <p>Platos suculentos, un ambiente familiar, eventos mensuales, buenos precios y toda clases de referencias
+            hacia una de las mejores series de televisión jamas creadas. Qué mas se puede pedir?
+            <br>
+            <br>
+            Ven a visitarnos en cualquiera de las dos sucursales con las que Breaking Bar cuenta, además de
+            convertirte en parte de nuestro crecimiento y disfruta los beneficios!
+            <br>
+            <br>
+            Te estamos esperando.
+          </p>
 
         </div>
+
+      </div>
+
+    </section>
 
   </main>
 
 
   <footer>
 
-    <h3>SPONSORS</h3>
+    <h4>SPONSORS</h4>
 
-    <div class="container">
+    <div class="container_footer">
       <div class="row sponsors">
         <div class="col-lg-4 col-4"><a href="https://www.coca-cola.com.ar/" target="_blank"><img
-              src="../assets/imagen/coca_cola_logo.png"></a></div>
+              src="../assets/imagen/coca_cola_logo.png" alt="Logo de la compania Coca Cola"></a></div>
         <div class="col-lg-4 col-4"><a href="https://www.nestle.com/" target="_blank"><img
-              src="../assets/imagen/nestle_logo.png"></a></div>
+              src="../assets/imagen/nestle_logo.png" alt="Logo de la Compania Nestle"></a></div>
         <div class="col-lg-4 col-4"><a href="https://www.pepsico.com/" target="_blank"><img
-              src="../assets/imagen/pepsico_logo.png"></a></div>
+              src="../assets/imagen/pepsico_logo.png" alt="Logo de la Compania Pepsico"></a></div>
       </div>
     </div>
 
-    <h3 class="socialPages">SOCIAL PAGES</h3>
+    <h4 class="socialPages">SOCIAL PAGES</h4>
 
     <div class="iconBox">
 
@@ -145,13 +142,15 @@
 
     </div>
 
+
     <h5>COPYRIGHT ESTEBAN CORLETTI 2023</h5>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-      crossorigin="anonymous"></script>
-
   </footer>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+    crossorigin="anonymous"></script>
+
 </body>
 
 </html>
