--- a/pages/sucursales.html
+++ b/pages/sucursales.html
@@ -18,7 +18,8 @@
 
 <body>
     <header>
-        <div class="logo"><a href="../index.html"><img src="../assets/imagen/logo.png"></a></div>
+        <div class="logo"><a href="../index.html"><img src="../assets/imagen/logo.png" alt="Logo de Breaking Bar"></a>
+        </div>
         <nav>
             <ul>
                 <li><a href="menu.html">MENÚ</a></li>
@@ -32,9 +33,10 @@
 
     <main class="sucursales">
 
-        <div class="imagenSucursales"><img src="../assets/imagen/sucursales_background.jpg"></div>
+        <div class="imagenSucursales"><img src="../assets/imagen/sucursales_background.jpg"
+                alt="Saul Goodman saboreando un helado"></div>
 
-        <article class="intro_sucursales">
+        <section class="intro_sucursales">
 
             <h1>SUCURSALES</h1>
 
@@ -46,13 +48,13 @@
                 ya nos encontramos trabajando en una futura sucursal en San Martín y Villa Lynch.
             </p>
 
-        </article>
+        </section>
 
         <section class="seccion_sucursales">
 
             <div class="contenedor_moreno">
 
-                <div class="container">
+                <div class="contenedor_sucursales">
                     <div class="row">
                         <div class="col-xl-6 col-lg-6 col-12">
 
@@ -62,7 +64,8 @@
 
                                 <div class="sucursalInfo">
                                     <h4>OPCIONES DE SERVICIO:</h4>
-                                    <h5>Consumo en el lugar · Retiros en la puerta del domicilio · Entrega a domicilio</h5>
+                                    <h5>Consumo en el lugar · Retiros en la puerta del domicilio · Entrega a domicilio
+                                    </h5>
                                 </div>
 
                                 <div class="sucursalInfo">
@@ -104,7 +107,7 @@
 
             <div class="contenedor_isidro_casanova">
 
-                <div class="container">
+                <div class="contenedor_sucursales">
                     <div class="row">
                         <div class="col-xl-6 col-lg-6 col-12">
 
@@ -114,12 +117,14 @@
 
                                 <div class="sucursalInfo_isidro_casanova">
                                     <h4>OPCIONES DE SERVICIO:</h4>
-                                    <h5>Consumo en el lugar · Retiros en la puerta del domicilio · Entrega a domicilio</h5>
+                                    <h5>Consumo en el lugar · Retiros en la puerta del domicilio · Entrega a domicilio
+                                    </h5>
                                 </div>
 
                                 <div class="sucursalInfo_isidro_casanova">
                                     <h4>DIRECCIÓN:</h4>
-                                    <h5>LEM, Guillermo Marconi 3520, B1765 Isidro Casanova, Provincia de Buenos Aires</h5>
+                                    <h5>LEM, Guillermo Marconi 3520, B1765 Isidro Casanova, Provincia de Buenos Aires
+                                    </h5>
 
                                 </div>
 
@@ -154,50 +159,24 @@
 
         </section>
 
-            <!--
-        <div class="sucursales">
-
-        <div class="sucursalInfo">
-
-            <h2>BREAKING BAR - MORENO</h2>
-            <br>
-                <p>OPCIONES DE SERVICIO:<br>
-                Consumo en el lugar · Retiros en la puerta · Entrega a domicilio</p>
-                <p>DIRECCIÓN:<br>
-                Concejal Alberto Rosset 191, B1744 Moreno, Provincia de Buenos Aires</p>
-                <p>HORAS:<br>
-                17:00PM a 01:00AM</p>
-                <p>TELÉFONO:</br>
-                011 3512-3224</p>
-                <br>
-
-        </div>
-
-            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13118.769601293661!2d-58.5932123!3d-34.7129376!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcc7b7c2613107%3A0x16aab586b697d88e!2sBreaking%20Bar!5e0!3m2!1ses!2sar!4v1679533840112!5m2!1ses!2sar" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-
-        </div>
-
-    -->
-
-
     </main>
 
     <footer>
 
-        <h3>SPONSORS</h3>
+        <h4>SPONSORS</h4>
 
-        <div class="container">
+        <div class="container_footer">
             <div class="row sponsors">
                 <div class="col-lg-4 col-4"><a href="https://www.coca-cola.com.ar/" target="_blank"><img
-                            src="../assets/imagen/coca_cola_logo.png"></a></div>
+                            src="../assets/imagen/coca_cola_logo.png" alt="Logo de la compania Coca Cola"></a></div>
                 <div class="col-lg-4 col-4"><a href="https://www.nestle.com/" target="_blank"><img
-                            src="../assets/imagen/nestle_logo.png"></a></div>
+                            src="../assets/imagen/nestle_logo.png" alt="Logo de la Compania Nestle"></a></div>
                 <div class="col-lg-4 col-4"><a href="https://www.pepsico.com/" target="_blank"><img
-                            src="../assets/imagen/pepsico_logo.png"></a></div>
+                            src="../assets/imagen/pepsico_logo.png" alt="Logo de la Compania Pepsico"></a></div>
             </div>
         </div>
 
-        <h3 class="socialPages">SOCIAL PAGES</h3>
+        <h4 class="socialPages">SOCIAL PAGES</h4>
 
         <div class="iconBox">
 
