Añado alts a imagenes restantes

--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -33,7 +33,7 @@
   <main class="nosotros">
 
     <div class="imagenNosotros"><img src="../assets/imagen/nosotros_background.jpg"
-        alt="Hall con varias pinturas de personajes y momentos de la serie Breaking Bar."></div>
+        alt="Clientes frecuentes disfrutando del servicion en sucursal de Breaking Bar."></div>
 
     <section class="contenedor_nosotros">
 
@@ -41,7 +41,7 @@
         <div class="col-xl-6 col-lg-5 col-12">
           <div class="nosotros_imagen--objetivo">
 
-            <img src="../assets/imagen/nosotros1.jpg">
+            <img src="../assets/imagen/nosotros1.jpg" alt="Hall con varias pinturas de personajes y momentos de la serie Breaking Bar">
 
           </div>
         </div>
