--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -76,7 +76,7 @@
         </div>
         <div class="col-xl-6 col-lg-5 col-12">
 
-          <iframe src="../assets/video/video_somos.mp4"></iframe>
+          <iframe src="https://www.youtube.com/embed/zKo3NuXpCH8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
         </div>
 
