--- a/pages/registrate.html
+++ b/pages/registrate.html
@@ -44,13 +44,13 @@
                     para miembros. Completa este pequeño formulario y disfruta todos los benefios!</p>
 
                 <form>
-                    <label for="name">NOMBRE</label>
-                    <input type="text" id="nombre" name="nombre">
+                    <label for="name">USUARIO</label>
+                    <input type="text" id="nombre" name="nombre" required>
                     <label for="telefono">TELÉFONO</label>
                     <input type="telefono" id="telefono" name="telefono">
                     <label for="email">E-MAIL</label>
                     <input type="email" id="email" name="email">
-                    <input class="submit" type="submit" value="SUBMIT">
+                    <input class="submit" type="submit" value="SUBMIT" required>
                 </form>
 
             </div>
