--- a/pages/error404.html
+++ b/pages/error404.html
@@ -21,13 +21,13 @@
 
 <body>
     <header>
-        <div class="logo"><a href="index.html"><img src="../assets/imagen/logo.png" alt="Logo de Breaking Bar"></a></div>
+        <div class="logo"><a href="../index.html"><img src="../assets/imagen/logo.png" alt="Logo de Breaking Bar"></a></div>
         <nav>
             <ul>
-                <li><a href="../pages/menu.html">MENÚ</a></li>
-                <li><a href="../pages/nosotros.html">NOSOTROS</a></li>
-                <li><a href="../pages/sucursales.html">SUCURSALES</a></li>
-                <li><a href="../pages/registrate.html">REGISTRATE</a></li>
+                <li><a href="menu.html">MENÚ</a></li>
+                <li><a href="nosotros.html">NOSOTROS</a></li>
+                <li><a href="sucursales.html">SUCURSALES</a></li>
+                <li><a href="registrate.html">REGISTRATE</a></li>
             </ul>
         </nav>
 
