--- a/pages/registrate.html
+++ b/pages/registrate.html
@@ -43,14 +43,14 @@
                 <p>Mejor llama a Saul, y que te cuente que tan bueno es el helado que obtuvo gracias a los beneficio
                     para miembros. Completa este pequeño formulario y disfruta todos los benefios!</p>
 
-                <form>
+                <form action="error404.html">
                     <label for="name">USUARIO</label>
                     <input type="text" id="nombre" name="nombre" required>
                     <label for="telefono">TELÉFONO</label>
                     <input type="telefono" id="telefono" name="telefono">
                     <label for="email">E-MAIL</label>
-                    <input type="email" id="email" name="email">
-                    <input class="submit" type="submit" value="SUBMIT" required>
+                    <input type="email" id="email" name="email" required>
+                    <input class="submit" type="submit" value="SUBMIT">
                 </form>
 
             </div>
